[package]
name = "pandora-module"
version = "2.0.0"
authors = ["Ray"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", path = "../../core/sr-std", default_features = false }
runtime-io = { package = "sr-io", path = "../../core/sr-io", default_features = false }
version = { package = "sr-version", path = "../../core/sr-version", default_features = false }
support = { package = "srml-support", path = "../../srml/support", default_features = false }
primitives = { package = "substrate-primitives", path = "../../core/primitives", default_features = false }
balances = { package = "srml-balances", path = "../../srml/balances", default_features = false }
system = { package = "srml-system", path = "../../srml/system", default_features = false }
sr-primitives = { path = "../../core/sr-primitives", default_features = false }
randomness-collective-flip = { package = "srml-randomness-collective-flip", path = "../../srml/randomness-collective-flip", default_features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"randomness-collective-flip/std",
]
